# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Python CI.yml
gendiff/: __init__.py  formats.py  generator_diff.py  parser.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: true_result  true_result.json
