[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["artem <harchenkoart@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pytest-cov = "^4.1.0"
pytest = "^7.3.1"
coverage = "^7.2.7"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
